--- a/cartridges/models/tools/google/gemini-pro.yml
+++ b/cartridges/models/tools/google/gemini-pro.yml
@@ -4,7 +4,7 @@ meta:
   name: Gemini Pro
   author: gbaptista
   version: 1.0.0
-  license: CC0-1.0
+  license: MIT
   description: Google's Gemini Pro model through Vertex AI API.
 
 interfaces:
