--- a/cartridges/models/tools/openai/gpt-4-turbo.yml
+++ b/cartridges/models/tools/openai/gpt-4-turbo.yml
@@ -4,7 +4,7 @@ meta:
   name: GPT-4 Turbo
   author: gbaptista
   version: 1.0.0
-  license: CC0-1.0
+  license: MIT
   description: OpenAI's GPT-4 Turbo model through OpenAI API.
 
 interfaces:
